--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,12 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+.image-container {
+  height: 9rem;
+  overflow: hidden;
+}
+
+.btn-info {
+  width: 7rem;
+}
